<resources>
    <string name="app_name">Bilibili HD 2</string>
    <string name="settings">设置</string>
    <string name="users">用户</string>
    <string name="about">关于</string>
    <string name="bilibili_api">bilibili-api</string>
    <string name="clear">清除</string>
    <string name="add">添加</string>
    <string name="login">登录</string>
    <string name="_import">导入</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="delete">删除</string>
    <string name="export">导出</string>
    <string name="home">主页</string>
    <string name="dynamic">动态</string>
    <string name="dynamic_web">动态(WebView)</string>
    <string name="history">历史</string>
    <string name="other">其他</string>
    <string name="not_logged_in">未登录</string>
    <string name="display">显示</string>
    <string name="follow_system">跟随系统</string>
    <string name="night_yes">暗色</string>
    <string name="night_no">亮色</string>
    <string name="ui_mod">UI 模式</string>
    <string name="ad">广告</string>
    <string name="main_card_Width_dp">主卡片宽度(dp)</string>
    <string name="dynamic_card_Width_dp">动态卡片宽度(dp)</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="reload">重载</string>
    <string name="retry">重试</string>
    <string name="stop">停止</string>
    <string name="pip">画中画</string>
    <string name="desktop_ua">桌面 UA</string>
    <string name="open_with_webview">用 WebView 打开</string>
    <string name="version">版本</string>
    <string name="build_type">构建类型</string>
    <string name="build_time">构建时间</string>
    <string name="project_home">项目主页</string>
    <string name="search">搜索</string>
    <string name="download">下载</string>
    <string name="close">关闭</string>
    <string name="share">分享</string>
    <string name="share_to">分享至</string>
    <string name="saved">已保存</string>
    <string name="like">赞</string>
    <string name="dislike">踩</string>
    <string name="coins">硬币</string>
    <string name="favorite">收藏</string>
    <string name="refresh_token">刷新 token</string>
    <string name="donate">捐赠</string>
    <string name="qr_code">二维码</string>
    <string name="report">举报</string>
    <string name="send">发送</string>
    <string name="comment">评论</string>
    <string name="danmaku">弹幕</string>
    <string name="play_pause_time">播放后台暂停时机</string>
    <string name="play">播放</string>
    <string name="play_settings">播放设置</string>
</resources>