<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="name"
        app:icon="@mipmap/ic_launcher"
        app:title="@string/app_name" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="version"
        app:title="@string/version" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="build_type"
        app:title="@string/build_type" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="build_time"
        app:title="@string/build_time" />
    <Preference
        app:iconSpaceReserved="false"
        app:title="@string/project_home"
        app:key="project_home"/>
    <Preference
        app:iconSpaceReserved="false"
        app:title="@string/donate"
        app:key="donate" />
    <com.takisoft.preferencex.SwitchPreferenceCompat
        app:key="allowAnalytics"
        app:title="AppCenter 匿名统计"
        app:iconSpaceReserved="false"
        app:summary="我们使用 Microsoft AppCenter 做匿名统计，以帮助我们更好的了解您的使用情况" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="about_analytics"
        app:title="关于 AppCenter 匿名统计" />
</PreferenceScreen>