<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_pip"
        android:icon="@drawable/ic_outline_picture_in_picture_alt_24"
        android:title="PIP"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_retry"
        android:title="@string/retry"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>