<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.takisoft.preferencex.SimpleMenuPreference
        app:defaultValue="0"
        app:entries="@array/ui_mod_entries"
        app:entryValues="@array/ui_mod_values"
        app:iconSpaceReserved="false"
        app:key="uiMod"
        app:title="@string/ui_mod"
        app:useSimpleSummaryProvider="true" />
    <com.takisoft.preferencex.EditTextPreference
        android:inputType="number"
        app:defaultValue="500"
        app:iconSpaceReserved="false"
        app:key="mainCardWidthDp"
        app:title="@string/main_card_Width_dp"
        app:useSimpleSummaryProvider="true" />
    <com.takisoft.preferencex.EditTextPreference
        android:inputType="number"
        app:defaultValue="500"
        app:iconSpaceReserved="false"
        app:key="dynamicCardWidthDp"
        app:title="@string/dynamic_card_Width_dp"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>