<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/open"
        android:icon="@drawable/ic_search"
        android:title="open"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_downward"
        android:title="@string/download"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_outline_content_copy_24"
        android:title="@android:string/copy"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/close"
        android:icon="@drawable/ic_clear"
        android:title="@string/close"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />
</menu>