<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.duzhaokun123.bilibilihd2.model.UserModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.duzhaokun123.bilibilihd2.ui.widget.GlideLoadRoundImageView
            android:id="@+id/civ"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:imageUrl="@{model.faceUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{model.name}"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/civ"
            app:layout_constraintTop_toTopOf="@id/civ"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{model.desc}'
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="uid:0" />

        <Button
            android:id="@+id/btn_clear"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/clear"
            android:textColor="@color/biliPink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_name" />

        <Button
            android:id="@+id/btn_add"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/biliPink"
            app:layout_constraintEnd_toEndOf="@+id/btn_clear"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_add"
            tools:listitem="@layout/item_user_card" />

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/btn_refresh"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_token"
            android:textColor="@color/biliPink"
            app:layout_constraintEnd_toStartOf="@+id/btn_clear"
            app:layout_constraintTop_toTopOf="@+id/btn_clear" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>