<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="biliView"
            type="com.hiczp.bilibili.api.app.model.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.duzhaokun123.bilibilihd2.ui.widget.GlideLoadRoundImageView
                    android:id="@+id/civ_face"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:imageUrl="@{biliView.data.owner.face}" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/civ_face"
                    android:text="@{biliView.data.owner.name}"
                    android:textColor="@{biliView.data.ownerExt.vip.vipStatus != 0 ? @color/biliPink : @color/textColor}"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_name"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@id/civ_face"
                    android:text='@{biliView.data.ownerExt.fans + "粉丝"}'
                    android:textSize="12sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{biliView.data.title}"
                android:textColor="@color/textColor"
                android:textIsSelectable="true"
                android:textSize="18sp" />

            <com.duzhaokun123.bilibilihd2.ui.widget.HonorView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="@{biliView.data.honor != null ? View.VISIBLE : View.GONE}"
                app:honor="@{biliView.data.honor}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="2dp"
                    android:text="@{String.valueOf(biliView.data.stat.view)}"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_play" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:drawablePadding="2dp"
                    android:text="@{String.valueOf(biliView.data.stat.danmaku)}"
                    android:textSize="12sp"
                    app:drawableStartCompat="@drawable/ic_danmaku" />

                <TextView
                    android:id="@+id/tv_uptime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@{biliView.data.bvid}"
                    android:textIsSelectable="true"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text='@{"av" + biliView.data.aid}'
                    android:textIsSelectable="true"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text='@{biliView.data.copyright == 1 ? "自制" : "转载"}'
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{biliView.data.desc}"
                android:textIsSelectable="true"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_like"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="2dp"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:text="@string/like"
                    android:textSize="12sp"
                    app:drawableTint="@color/dimText"
                    app:drawableTopCompat="@drawable/ic_thumb_up" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_dislike"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="2dp"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:text="@string/dislike"
                    android:textSize="12sp"
                    app:drawableTint="@color/dimText"
                    app:drawableTopCompat="@drawable/ic_thumb_down" />

                <TextView
                    android:id="@+id/tv_coin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="2dp"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:text="@string/coins"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_favorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:drawablePadding="2dp"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:text="@string/favorite"
                    android:textSize="12sp" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp">

                <RadioGroup
                    android:id="@+id/rg_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="10dp"
                app:chipSpacingVertical="-5dp" />
        </LinearLayout>
    </ScrollView>
</layout>